test/corpus/tag.txt
=============================
Empty class
=============================
.
---

(snippet
  (tag
    (class)))

=============================
Only name
=============================
nav
---

(snippet
  (tag
    (name)))

=============================
Mutliple id's
:skip
=============================
nav#id1.class#id2
---

(snippet
  (tag
    (name)
    (id)
    (class)
    (id)))

=============================
Number in name
=============================
h2
---

(snippet
  (tag
    (name)))

=============================
Item numbering
=============================
.item$
---

(snippet
  (tag
    (class)))

=============================
Text
=============================
a{Click me}
---

(snippet
  (tag
    (name)
    (text)))
